# na

.github/workflows/: build.yml
OpenBoard-master/: CMakeLists.txt  OpenBoard.pro  README.md
OpenBoard-master/.github/ISSUE_TEMPLATE/: bug_report.md  building-or-packaging-issue.md  feature_request.md  question.md
OpenBoard-master/cmake/: DependencyQuaZip.cmake
OpenBoard-master/plugins/cffadaptor/src/: CMakeLists.txt  UBCFFAdaptor.cpp  UBCFFAdaptor.h  UBGlobals.h
OpenBoard-master/release_scripts/linux/: build.sh  package.sh
OpenBoard-master/release_scripts/linux/debian_package_files/: prerm
OpenBoard-master/release_scripts/osx/: OpenBoard.packproj  build.sh  codesign.sh  notarize.sh  package.sh  relink_libs.sh
OpenBoard-master/release_scripts/windows/: OpenBoard.iss  create-setup.bat  release.win7.vc9.bat
OpenBoard-master/resources/i18n/: OpenBoard_fa.ts
OpenBoard-master/resources/startupHints/locales/en/: 10.html  11.html
OpenBoard-master/src/core/: main.cpp
